--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -14,11 +14,12 @@
 .contentGrid {
   display: flex;
   flex-direction: row;
-  gap: 12rem;
+  gap: 8rem;
   width: 100%;
   margin-top: 2rem;
   align-items: flex-start;
   min-height: calc(100vh - 300px);
+  padding-inline: 2rem;
 }
 
 .textColumn {
@@ -201,6 +202,12 @@
 /* --------------------------------
  * 6. Responsive Adjustments
  * -------------------------------- */
+@media (max-width: 1600px) {
+  .contentGrid {
+    gap: 4rem;
+  }
+}
+
 @media (max-width: 996px) {
   .contentGrid {
     flex-direction: column;
@@ -211,6 +218,9 @@
     max-width: 100%;
   }
 
+  .homeContainer {
+    padding: 2rem 0 4rem;
+  }
 }
 
 @media (max-width: 768px) {
@@ -225,5 +235,9 @@
   .cardActions {
     flex-direction: column;
     gap: 1rem;
+  }
+
+  .homeContainer {
+    padding: 0 0 2rem;
   }
 }
