Add some more breathing room to docs body
Signed-off-by: Fatih Altinok <fatihaltinok@live.com>

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -808,3 +808,14 @@ th {
   margin-top: 2rem;
   font-size: var(--font-size-body-s);
 }
+
+/* --------------------------------
+ * 15. Documentation body
+ * -------------------------------- */
+[class*='docItemCol'] {
+  padding-inline: 2rem;
+}
+
+.col--3 {
+  padding-left: 0;
+}
